[package]
name = "metl"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.47", features = ["derive" ] }
colored = "3.0.0"
directories = "6.0.0"
serde = { version = "1.0.225", features = ["derive", "serde_derive"] }
serde_json = "1.0.145"
thiserror = "2.0.16"
toml = "0.9.7"
toml_edit = "0.23.6"
